--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "expo-sensors": "^13.0.9",
     "nativewind": "^2.0.11",
     "react-native": "0.74.4",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "twrnc": "^4.5.0"
   }
 }
