--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "frontend",
-  "version": "0.0.1",
-  "private": true,
+  "name": "paddleapp",
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo-sensors": "^13.0.9",
-    "nativewind": "^2.0.11",
-    "react-native": "0.74.4",
-    "tailwindcss": "^3.4.7",
-    "twrnc": "^4.5.0"
-  }
+    "expo": "~51.0.23",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
