--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
